welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: illegal start of simple expression
while (2 * biscuit =< caseOrange + 1)) {
                                     ^